--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body { margin:0;font-family:'Poppins',sans-serif; background:radial-gradient(cir
 import { connectWallet, fulfillOrder, PROXY_ADDRESS } from './SeaportUtils.js';
 
 document.addEventListener('DOMContentLoaded', async () => {
-  const BACKEND_URL = "https://artigyox.onrender.com";
+  const BACKEND_URL = "https://bitsinartig.onrender.com";
 
   let provider, signer, userAddress, seaport;
   let nftData = [], currentPage = 1;
